tests/shouldFail/j021a.c
int main(void){
	int x;
	return x;
}
